--- a/app/sass/modules/basket.style.scss
+++ b/app/sass/modules/basket.style.scss
@@ -28,7 +28,7 @@
 }
 @media screen and (max-width: 991px) {
     .basket__table {
-        margin-top: 20px;
+        margin-top: 20px!important;
     }
     .basket__main-title h1 {
         font-size: 20px;
